--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.htnguyen.customeranalysis">
 
+    <uses-permission android:name="android.permission.USE_BIOMETRIC" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -14,7 +23,13 @@
         android:theme="@style/Theme.CustomerAnalysis"
         tools:targetApi="31">
         <activity
-            android:name=".AddDataActivity"
+            android:name=".view.activity.TrashActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.activity.LanguageActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.activity.AddDataActivity"
             android:exported="false" />
         <activity
             android:name=".view.main.MainActivity"
